# itapp

backend/: Cargo.toml
backend/src/: main.rs
backend/src/masters/: master.rs  mst_ofc.rs
backend/src/menu/: init.rs  menu.rs  mod.rs
backend/src/model/: mod.rs  user.rs
backendd/src/: error.rs  main.rs
backendd/src/masters/: mod.rs
backendd/src/model/: master.rs  menu.rs
fron3tend/: Cargo.toml  package-lock.json
fron3tend/src/: main.rs
fron3tend/src/component/: mod.rs
fron3tend/src/model/: menu.rs
fron3tend/src/pages/: home.rs  mod.rs
fron3tend/src/pages/masters/: frm_office.rs  mod.rs
frontend/: Trunk_mac.toml  Trunk_win.toml  index.html  package.json  tailwind.config.js
frontend/$pwd/: app.css
frontend/css/: app.css
frontend/src/: route.rs
frontend/src/component/: icons.rs  mod.rs  navbar.rs  sidebar.rs  submenu.rs
frontend/src/model/: master.rs  menu.rs
